--- a/DeepLearn_RethinkFun/第3章-深度学习里的微积分/04-导数运算法则.ipynb
+++ b/DeepLearn_RethinkFun/第3章-深度学习里的微积分/04-导数运算法则.ipynb
@@ -1,16 +1,38 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
-    ""
-   ]
+    "# ===== 导数运算法则 =====\n",
+    "\n",
+    "# 1. 函数和差求导法则\n",
+    "#   - 如果 u(x) 和 v(x) 可导，则 [u(x) ± v(x)]' = u'(x) ± v'(x)\n",
+    "#   - 证明基于导数定义，极限的线性性质\n",
+    "\n",
+    "# 2. 函数积的求导法则\n",
+    "#   - 如果 u(x) 和 v(x) 可导，则 [u(x)v(x)]' = u'(x)v(x) + u(x)v'(x)\n",
+    "#   - 推论：常数倍函数 [C*g(x)]' = C*g'(x)\n",
+    "\n",
+    "# 3. 函数商的求导法则\n",
+    "#   - 如果 u(x) 和 v(x) 可导，且 v(x) ≠ 0，则 [u(x)/v(x)]' = [u'(x)v(x) - u(x)v'(x)] / [v(x)]^2\n",
+    "#   - 证明通过分子有理化和极限运算\n",
+    "\n",
+    "# 4. 链式法则（复合函数求导）\n",
+    "#   - 如果 y = f(u) 且 u = g(x) 可导，则 dy/dx = dy/du * du/dx\n",
+    "#   - 或 f'(x) = f'(u) * g'(x)\n",
+    "#   - 直观理解：汇率链式相乘（人民币→美元→比特币）\n",
+    "\n",
+    "# 5. 例题应用\n",
+    "#   - f(x) = (e^x sin x + 3x)^2 的求导过程：\n",
+    "#       1. 设 u = e^x sin x + 3x，则 f(u) = u^2\n",
+    "#       2. 应用链式法则：f'(x) = 2u * u'\n",
+    "#       3. 求 u' = (e^x sin x)' + (3x)' = e^x sin x + e^x cos x + 3\n",
+    "#       4. 最终结果：f'(x) = 2(e^x sin x + 3x)(e^x sin x + e^x cos x + 3)"
+   ],
+   "id": "5cbab3656d29c651"
   }
  ],
  "metadata": {
